<resources>
    <string name="app_name">Sign Wallet</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum" translatable="false">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="article_detail_more_info">Conditions</string>


    <string name="samples_title" translatable="false">Hello title</string>
    <string name="samples_subhead">Hello Subhead</string>
    <string name="samples_hint_username">Username</string>
    <string name="samples_hint_email">E-Mail</string>


    <string name="navigation_title">eCertic Sign Wallet</string>
    <string name="navigation_quotes">Contracts</string>
    <string name="navigation_samples">Samples</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_signature">Signature Pad</string>
    <string name="navigation_sub_items">Sub items</string>
    <string name="navigation_dummy_item_1" translatable="false">Item 1</string>
    <string name="navigation_dummy_item_2" translatable="false">Item 2</string>

    <string name="agreement">I agree the terms and conditions.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="scanner">Scanner</string>
    <string name="qrscanner">QRScanner</string>
    <string name="title_activity_scanner_qr">ScannerQrActivity</string>
    <string name="title_activity_pdf">PDFActivity</string>

</resources>
